完成遍历省市县三级列表的功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.coolweather">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--    从Android 6.0开始引入了对Https的推荐支持，而到了Android 9.0的系统上面默认所有Http的请求都无法响应-->
+    <!--    最直接的解决办法就是在AndroidManifest.xml 的application下添加 android:usesCleartextTraffic=“true”-->
+
     <application
         android:name="org.litepal.LitePalApplication"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
